# ChipEmu

./: CMakeLists.txt  Chip8.cpp  Chip8.h  ChipEMU.cpp  ChipEMU.sln  ChipEMU.vcxproj  ChipEMU.vcxproj.filters  Emulator.h  README.md
Debug/: ChipEMU.ilk  ChipEMU.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/ChipEMU.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChipEMU.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  Chip8.cpp  Chip8.h  main.cpp
src/sdl/: CMakeLists.txt  sdl.cpp  sdl.h
